14-kubernetes-03-network-01/service-backend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - name: port-80
      port: 80
      protocol: TCP
      targetPort: 80
