14-kubernetes-03-network-01/service-cache.yml
---
apiVersion: v1
kind: Service
metadata:
  name: cache
  namespace: app
spec:
  selector:
    app: cache
  ports:
    - name: port-80
      port: 80
      protocol: TCP
      targetPort: 80
