14-kubernetes-03-network-01/service-frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
spec:
  selector:
    app: frontend
  ports:
    - name: port-80
      port: 80
      protocol: TCP
      targetPort: 80
